; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-typhoon.c_vidioc_s_frequency.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-typhoon.c_vidioc_s_frequency.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_frequency = type { i32 }
%struct.typhoon = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_frequency*)* @vidioc_s_frequency to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_s_frequency(%struct.file* %0, i8* %1, %struct.v4l2_frequency* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_frequency*, align 8
  %7 = alloca %struct.typhoon*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_frequency* %2, %struct.v4l2_frequency** %6, align 8
  %8 = load %struct.file*, %struct.file** %4, align 8
  %9 = call %struct.typhoon* @video_drvdata(%struct.file* %8)
  store %struct.typhoon* %9, %struct.typhoon** %7, align 8
  %10 = load %struct.v4l2_frequency*, %struct.v4l2_frequency** %6, align 8
  %11 = getelementptr inbounds %struct.v4l2_frequency, %struct.v4l2_frequency* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.typhoon*, %struct.typhoon** %7, align 8
  %14 = getelementptr inbounds %struct.typhoon, %struct.typhoon* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load %struct.typhoon*, %struct.typhoon** %7, align 8
  %16 = load %struct.typhoon*, %struct.typhoon** %7, align 8
  %17 = getelementptr inbounds %struct.typhoon, %struct.typhoon* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @typhoon_setfreq(%struct.typhoon* %15, i32 %18)
  ret i32 0
}

declare dso_local %struct.typhoon* @video_drvdata(%struct.file*) #1

declare dso_local i32 @typhoon_setfreq(%struct.typhoon*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
